Fix volume slider thumb vertical alignment

--- a/css/guess-rank.css
+++ b/css/guess-rank.css
@@ -126,6 +126,7 @@
     background: #ff4655;
     cursor: pointer;
     border: none;
+    margin-top: -5px;
 }
 
 .vol-slider::-moz-range-thumb {
@@ -139,6 +140,7 @@
 
 .vol-slider::-webkit-slider-runnable-track {
     height: 6px;
+    background: #333;
     border-radius: 3px;
 }
 
